--- a/package.json
+++ b/package.json
@@ -27,7 +27,8 @@
     "react-native-web": "0.17.1",
     "react-navigation-header-buttons": "^8.0.0",
     "react-redux": "^7.2.6",
-    "redux": "^4.1.2"
+    "redux": "^4.1.2",
+    "redux-saga": "^1.1.3"
   },
   "devDependencies": {
     "@babel/core": "^7.12.9"
