--- a/package.json
+++ b/package.json
@@ -11,6 +11,8 @@
   },
   "dependencies": {
     "@expo/vector-icons": "^12.0.5",
+    "@react-native-firebase/app": "^14.3.0",
+    "@react-native-firebase/auth": "^14.3.0",
     "@react-navigation/drawer": "^6.1.8",
     "@react-navigation/native": "^6.0.6",
     "@react-navigation/native-stack": "^6.2.5",
@@ -28,7 +30,8 @@
     "react-navigation-header-buttons": "^8.0.0",
     "react-redux": "^7.2.6",
     "redux": "^4.1.2",
-    "redux-saga": "^1.1.3"
+    "redux-saga": "^1.1.3",
+    "@react-native-async-storage/async-storage": "~1.15.0"
   },
   "devDependencies": {
     "@babel/core": "^7.12.9"
